# finkele

./: .gitignore  CNAME  README.md  floodmap_generator.py  index.html  package-lock.json  package.json  pyproject.toml
.github/: html-validate-config.json
.github/workflows/: deploy.yml
assets/css/: dashboard.css  responsive.css
assets/js/: animations.js  dashboard.js  globe.js
public/: dashboard.html  floodmap.html  index.html
public/assets/css/: dashboard.css  responsive.css  style.css
public/assets/js/: animations.js  api-service.js  climate-charts.js  dashboard.js  main.js
public/data/: regions.geojson  sample-data.json
src/: index.js
